simplificar gestion de imagenes por post y restaurar upload en servidor
